# cabal

cabal-testsuite/PackageTests/BuildToolRebuild/: cabal.project  setup.test.hs
cabal-testsuite/PackageTests/BuildToolRebuild/client/: client.cabal
cabal-testsuite/PackageTests/BuildToolRebuild/pre-proc-1/: MyCustomPreprocessor.hs  pre-proc.cabal
cabal-testsuite/PackageTests/BuildToolRebuild/pre-proc-2/: pre-proc.cabal
