name:                pre-proc
version:             1.0.0.0
synopsis:            Checks that build-tool version changes trigger recompilation
license:             BSD3
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

executable             zero-to-one
  main-is:             MyCustomPreprocessor.hs
  build-depends:       base, directory
  default-language:    Haskell2010
